tests/e2e/gateway-initcontainer/00-install.yaml
apiVersion: security.brcmlabs.com/v1
kind: Gateway
metadata:
  name: ssg-initcontainer-test
spec:
  version: "11.2.1"
  license:
    accept: true
    secretName: gateway-license
  app:
    replicas: 1
    image: docker.io/caapim/gateway:11.2.1
    imagePullPolicy: IfNotPresent
    management:
      cluster:
        hostname: gateway.brcmlabs.com
      username: admin
      password: 7layer
    bootstrap:
      script:
        enabled: true
    initContainers:
     - name: simple-init
       image: docker.io/layer7api/simple-init:1.0.1
       imagePullPolicy: Always
       volumeMounts:
       - name: config-directory
         mountPath: /opt/docker/custom
    listenPorts:
      harden: true
      custom:
        enabled: false
      ports: []
    service:
      # annotations:
      type: LoadBalancer
      ports:
        - name: https
          port: 8443
          targetPort: 8443
          protocol: TCP
        - name: management
          port: 9443
          targetPort: 9443
          protocol: TCP
    livenessProbe:
      exec:
        command:
        - /bin/bash
        - /opt/docker/rc.d/diagnostic/health_check.sh
      failureThreshold: 25
      initialDelaySeconds: 15
      periodSeconds: 10
      successThreshold: 1
      timeoutSeconds: 1
    readinessProbe:
      exec:
        command:
        - /bin/bash
        - /opt/docker/rc.d/diagnostic/health_check.sh
      failureThreshold: 25
      initialDelaySeconds: 15
      periodSeconds: 10
      successThreshold: 1
      timeoutSeconds: 1
