tests/e2e/gateway-initcontainer/00-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 300
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssg-initcontainer-test
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    spec:
      affinity: {}
      containers:
      - envFrom:
        - configMapRef:
            name: ssg-initcontainer-test
        - secretRef:
            name: ssg-initcontainer-test
        image: docker.io/caapim/gateway:11.2.1
        imagePullPolicy: IfNotPresent
        lifecycle: {}
        name: gateway
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 9443
          name: management
          protocol: TCP
        resources: {}
        securityContext: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      initContainers:
      - image: docker.io/layer7api/simple-init:1.0.1
        imagePullPolicy: Always
        name: simple-init
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/docker/custom
          name: config-directory
      - env:
        - name: BOOTSTRAP_BASE
          value: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/bundle/graphman/0
        - name: STATESTORE_CONFIG
          value: /graphman/statestore-config/
        - name: STATESTORE_SECRET
          value: /graphman/statestore-secret/
        image: docker.io/caapim/graphman-static-init:1.0.5
        imagePullPolicy: IfNotPresent
        name: graphman-static-init
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
status:
  replicas: 1
  readyReplicas: 1
